--- a/index.html
+++ b/index.html
@@ -1,94 +1,46 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Impacto do Desmatamento</title>
+    <title>Campo Cidade Plantação de Soja</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Impacto do Desmatamento</h1>
-        <img src="cataratas-do-iguacu.jpg" alt="Foto das Cataratas do Iguaçu, um lugar com muitas árvores e mata nativa preservada.">
-        <p>O desmatamento intensifica fenômenos negativos no meio ambiente e na vida das pessoas, afetando enchentes, temperatura e qualidade de vida.</p>
-        <nav>
-            <ul>
-                <li><a href="#problemas">Os Problemas</a></li>
-                <li><a href="#consequencias">Consequências</a></li>
-                <li><a href="#conclusao">Conclusão</a></li>
-            </ul>
-        </nav>
+        <h1>Campo Cidade Plantação de Soja</h1>
     </header>
-
-<!-- código omitido -->
-<!-- código omitido -->
-    <!-- código omitido -->
-    <!-- código omitido -->
-
-<a href="https://www.youtube.com/v=ILh7nDEKGqc&pp=ygUXSW1wYWN0byBkbyBEZXNtYXRhbWVudG8%3D" class="cta-button" target="_blank">Como impacta o mundo? <i class="fa-solid fa-arrow-up-right-from-square" style="color: var(--text-color);"></i></a>
-
-<!-- código omitido -->
-    <!-- código omitido -->
-
-<a href="https://www.youtube.com/watch?v=IIh7nDEkGqc&pp=ygUXSW1wYWN0byBkbyBEZXMgbWF0YW1lbnQ%3D" class="cta-button" target="_blank">Como impacta o mundo? <i class="fa-solid fa-arrow-up-right-from-square" style="color: var(--text-color);"></i></a>
-
-<!-- código omitido -->
-
-<img src="cataratas-do-iguac.jpg" alt="Foto das Cataratas do Iguaçu, um lugar com muitas árvores e mata nativa preservada.">
-
-<!-- código omitido -->
-    <!-- código omitido -->
-
-<img src="cataratas-do-iguacu.jpg" alt="Foto das Cataratas do Iguaçu, um lugar com muitas árvores e mata nativa preservada.">
-
-<!-- código omitido -->
-    
-
-    <main>
-        <section id="problemas" class="conteudo">
-            <h2>Os Problemas</h2>
-            <article>
-                <h3>Aumento das enchentes</h3>
-                <p>As árvores absorvem a água da chuva e ajudam na infiltração no solo. Sem vegetação, a água escoa rapidamente, causando enchentes.</p>
-            </article>
-
-            <article>
-                <h3>Calor excessivo e ilhas de calor</h3>
-                <p>O desmatamento reduz a evapotranspiração das plantas, elevando a temperatura das cidades e aumentando o efeito das ilhas de calor.</p>
-            </article>
-
-            <article>
-                <h3>Redução da qualidade de vida</h3>
-                <p>A destruição das florestas impacta a biodiversidade, aumenta a poluição e reduz o contato com áreas verdes, afetando a saúde mental e respiratória.</p>
-            </article>
-
-            <a href="https://www.youtube.com/watch?v=ILh7nDEKGqc&pp=ygUXSW1wYWN0byBkbyBEZXNtYXRhbWVudG8%3D" class="cta-button" target="_blank">Como impacta o mundo? <i class="fa-solid fa-arrow-up-right-from-square" style="color: var(--text-color);"></i></a>
-        </section>
-
-        <section id="consequencias" class="conteudo">
-            <h2>Consequências</h2>
-            <ul>
-                <li>Aumento das enchentes e erosão do solo</li>
-                <li>Aumento das temperaturas e mudanças climáticas</li>
-                <li>Perda da biodiversidade</li>
-                <li>Redução da qualidade de vida nas cidades</li>
-                <li>Agravamento de problemas de saúde</li>
-                <li>Impacto na economia de comunidades locais</li>
-            </ul>
-        </section>
-
-        <section id="conclusao" class="conteudo">
-            <h2>Conclusão</h2>
-            <p>O desmatamento impacta diretamente a vida humana. Para evitar suas consequências, é necessário preservar o meio ambiente, investir em reflorestamento e adotar práticas sustentáveis.</p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/ILh7nDEKGqc?si=feol6sZCHo1Cg-jQ" title="YouTube video.">
-        </section>
-
-    </main>
-
-    <footer>
-        <a href="https://www.linkedin.com/in/femascheti" class="cta-footer">Faça parte dessa causa!</a>
-        <p>2025 | @femascheti</p>
-    </footer>
+    <div class="container">
+        <div class="image-frame">
+            <img src="soja-plantio.jpg" alt="Campo de soja">
+        </div>
+        <div class="informativo">
+            <h2>Informações sobre a Plantação de Soja</h2>
+            <p>A soja é uma das culturas mais importantes do mundo, com destaque para países como Brasil, Estados Unidos e Argentina, que são grandes produtores e exportadores dessa leguminosa. Ela é fundamental para a indústria de alimentos, biocombustíveis e até na produção de ração animal. A soja se adapta bem ao clima tropical, o que a torna uma opção estratégica para as regiões agrícolas do Brasil, especialmente no Centro-Oeste e Sul do país, onde o cultivo é intensivo.</p>
+            <p>A plantação de soja no Brasil tem se expandido rapidamente, contribuindo para o crescimento da economia agrícola e sendo um dos principais produtos de exportação. A produção de soja é favorecida pela alta demanda internacional, especialmente pela China, que é o maior comprador da soja brasileira. Além disso, a soja é uma cultura que oferece boas perspectivas de rendimento, com aumento da produtividade devido ao avanço tecnológico e à melhoria das práticas agrícolas.</p>
+            <p>Entretanto, essa expansão traz consigo desafios ambientais e sociais, principalmente relacionados ao uso excessivo de agrotóxicos e à necessidade de grandes áreas de terra para o cultivo. A monocultura de soja tem impacto direto na biodiversidade, desmatando áreas de vegetação nativa, o que contribui para a perda de habitats naturais e o aumento das emissões de gases de efeito estufa.</p>
+            <p>Apesar desses desafios, a soja continua sendo um pilar fundamental da agricultura moderna, com um papel relevante na segurança alimentar global e no desenvolvimento das economias rurais.</p>
+        </div>
+        <div class="content">
+            <div>
+                <h2>Vantagens</h2>
+                <ul>
+                    <li>Alta produtividade, com grandes rendimentos por hectare</li>
+                    <li>Demanda crescente, especialmente para exportação</li>
+                    <li>Possibilidade de diversificação de culturas no campo</li>
+                    <li>Uso crescente de tecnologias que melhoram a produtividade e reduzem os custos de produção</li>
+                </ul>
+            </div>
+            <div>
+                <h2>Desvantagens</h2>
+                <ul>
+                    <li>Impacto ambiental, como desmatamento e uso intensivo de agrotóxicos</li>
+                    <li>Monocultura, que pode levar à degradação do solo e perda de biodiversidade</li>
+                    <li>Dependência de insumos químicos e fertilizantes</li>
+                    <li>Vulnerabilidade a pragas e doenças, exigindo controle constante</li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
-</html> 
-
+</html>
